@@ -34,6 +34,8 @@ PHP                                                                        NEWS
 - Fixed bug #30096 (gmmktime does not return the corrent time). (Derick)
 - Fixed bug #30052 (Crash on shutdown after odbc_pconnect()). (Edin)
 - Fixed bug #28377 (debug_backtrace is intermittently passing args). (Dmitry)
+- Fixed bug #28072 (static array with some constant keys will be incorrectly
+  ordered). (Dmitry)
 - Fixed bug #27268 (Bad references accentuated by clone). (Dmitry)
 
 22 Jun 2005, PHP 5.1 Beta 2
